--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.27)
-project(untitled5)
+project(untitled)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(untitled5
-        Proj/Parser.cpp
-        Proj/Parser.h
-        Proj/WaterSupply.cpp
-        Proj/WaterSupply.h
-        Proj/DataTypes.h
-        Proj/DataTypes.h
-        main.cpp
+add_executable(untitled main.cpp
+        dataParser.h
+        dataParser.cpp
+        menu.h
+        dataStructures/Graph.h
+        functions.cpp
+        haversine.cpp
+        haversine.h
 )
